# Block

./: .buildinfo  .gitignore  BaseOperator.C  BaseOperator.h  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  CSFOverlapHelement.C  Coefficients.C  Doxyfile  IrrepSpace.C  IrrepSpace.h  IrrepVector.h  MatrixBLAS.C  MatrixBLAS.h  ObjectMatrix.h  Operators.C  Operators.h  OverlapHelement.C  OverlapHelement.c  README.md  Schedule.C  SpinQuantum.C  SpinQuantum.h  SpinSpace.C  SpinSpace.h  StateInfo.C  StateInfo.h  Symmetry.C  Symmetry.h  Venenorosmd@msn.com  WORKSHEET  anglib.C  anglib.h  array.h  benchmark.html  blas_calls.h  build.html  couplingCoeffs.C  couplingCoeffs.h  (+97 more)
Manual/: benchmarks.tex  block_logo.eps  intro.tex
README_Examples/: FCIDUMP
README_Examples/12/: output.out  output_bra.out  output_ket.out
_sources/: build.txt  index.txt
btas/include/: contract.h  decompose.h  indexed_loop.h  permute.h  time_stamp.h
btas/lib/: Dreindex.C  clapack.C  libbtas.C  makefile  makefile.cblas  tests.C
dmrg_tests/: clean  runtest  test_energy.py  test_fourpdm.py  test_nevpt2_energy.py  test_onepdm.py  test_threepdm.py  test_transitiononepdm.py
dmrg_tests/NH5_c5v/: FCIDUMP  FCIDUMP_c5v  c5v.cgcoeffs  dmrg.conf  dmrg_c5v.conf  dmrg_irrep1.conf  dmrg_irrep2.conf  dmrg_irrep3.conf  dmrg_irrep4.conf  makeLz_eigenfuncs.py
dmrg_tests/bcs/: ComputeCoefficients  DMETDUMP  dmrg.conf  dmrg.conf.energy  ref_onepdm.0.0  spat_pairmat.0.0.txt
dmrg_tests/bcs_transitionpdm/: dmrg.conf  ref_onepdm.1.0.txt  spat_pairmat.1.0.txt
dmrg_tests/c2_d2h/: dmrg.conf  dmrg.e.bkp  dmrg.out  genblock.conf  genblock.out  genblocks.conf  genblocks.out  restart.conf  spat_twopdm.0.0.bkp  spat_twopdm.0.0.txt  spat_twopdm.1.1.txt  twopdm.conf  twopdm.out
dmrg_tests/c2_d2h_smallM/: dmrg.conf  dmrg_fullrestart.conf  qcdmrg.int1  qcdmrg.int2  test_onepdm_withtwopdm.py  test_twopdm_withe.py
dmrg_tests/c2_dinfh/: FCIDUMP.new  dmrg_irrep1.conf  dmrg_irrep4.conf  dmrg_irrep5.conf
dmrg_tests/h2_tiny/: dmrg.conf  dmrg.e.bkp  dmrg.out  qcdmrg.int1  qcdmrg.int2
dmrg_tests/h2o_nevpt2/: FCIDUMP  OrbOrder.tmp  ReOrder.tmp  dmrg.conf  dmrg.nevpt2.inp  test.EOrb.tmp  test.H  test.IAJB.tmp  test.IJKA.tmp  test.IKJA.tmp  test.IKJL.tmp
dmrg_tests/h2o_nosym/: FCIDUMP  dmrg.conf  dmrg.e  dmrg.e.bkp  dmrg.out  qcdmrg.int1  qcdmrg.int2
dmrg_tests/h2o_npdm/: A16_matrix.0.0.txt.ref  A22_matrix.0.0.txt.ref  FCIDUMP  dmrg3.conf  dmrg4.conf  npdm_nevpt.conf  spat_threepdm.0.0.txt
dmrg_tests/h2o_transitionpdm/: FCIDUMP  dmrg_onepdm.conf  dmrg_statespecific.conf  spat_onepdm.0.0.txt  spat_onepdm.1.0.txt  spat_onepdm.1.1.txt
dmrg_tests/heisenberg_2d/: FCIDUMP  dmrg.conf
dmrg_tests/hubbard/: dmrg.conf  spat_onepdm.0.0.txt
dmrg_tests/hubbard_nonspinpdm/: FCIDUMP  dmrg_onepdm.conf  dmrg_twopdm.conf  spat_twopdm.0.0.txt
dmrg_tests/hubbard_nospin/: dmrg.conf  spat_onepdm.0.0.txt
dmrg_tests/hubbard_stateSpecific/: dmrg.conf  dmrg_statespecific.conf
dmrg_tests/hubbard_transition_pdm/: dmrg_onepdm.conf  dmrg_twopdm.conf  spat_onepdm.0.0.txt  spat_onepdm.1.1.txt  spat_twopdm.0.0.txt  spat_twopdm.1.1.txt
dmrg_tests/mpspt2/: FCIDUMP  FOCK  PERTURB  compress.conf  dmrg.conf  response.conf
dmrg_tests/npdm_h2o_small/: A16_matrix.0.0.ref  A16_matrix.0.0.ref.bkp  CreCreCreCre_10_p1.tmp  CreCreCreCre_11_p0.tmp  CreCreCreCre_11_p1.tmp  CreCreCreCre_1_p1.tmp  CreCreCreCre_3_p0.tmp  CreCreCreCre_3_p1.tmp  CreCreCreCre_4_p1.tmp  CreCreCreCre_5_p0.tmp  CreCreCreCre_5_p1.tmp  CreCreCreCre_6_p0.tmp  CreCreCreCre_8_p0.tmp  CreCreCreCre_8_p1.tmp  CreCreCreDes_11_p0.tmp  CreCreCreDes_11_p1.tmp  CreCreCreDes_1_p0.tmp  CreCreCreDes_2_p0.tmp  CreCreCreDes_3_p0.tmp  CreCreCreDes_3_p1.tmp  CreCreCreDes_5_p0.tmp  CreCreCreDes_5_p1.tmp  CreCreCreDes_6_p0.tmp  CreCreCreDes_7_p1.tmp  CreCreCreDes_8_p0.tmp  CreCreCreDes_8_p1.tmp  CreCreCre_11_p0.tmp  CreCreCre_11_p1.tmp  CreCreCre_1_p1.tmp  CreCreCre_2_p0.tmp  CreCreCre_3_p0.tmp  CreCreCre_3_p1.tmp  CreCreCre_4_p1.tmp  CreCreCre_5_p0.tmp  CreCreCre_5_p1.tmp  CreCreCre_6_p1.tmp  CreCreCre_8_p0.tmp  CreCreCre_8_p1.tmp  CreCreDesCre_10_p1.tmp  CreCreDesCre_11_p0.tmp  (+162 more)
docs/: Makefile  README.md
docs/old/: cyclic.eps  intro.aux  intro.blg  intro.dvi  intro.out  intro.tex  intro.toc
docs/source/: build.rst  conf.py  examples-with-pyscf.rst  examples.rst  index.rst  keywords.rst  overview.rst  vocl4.py  with-pyscf.rst
genetic/: Cell.h  CrossOver.C  Evaluate.C  Evaluate.h  GAInput.C  GAInput.h  GAOptimize.C  GAOptimize.h  GAglobal.h  Gene.h  Generation.C  Generation.h  Mutation.C  README  RandomGenerator.C  ReadIntegral.C  ReadIntegral.h  fiedler.C  ga.conf  gaordering.C  genetic_utils.h  main.C  makefile  makefile.naoki
include/: IntegralMatrix.C  IntegralMatrix.h  boostutils.h  communicate.h  multiarray.h  newmatutils.h  para_array.h  printutils.h  sortutils.h  stlutils.h  tinyslater.h
modules/ResponseTheory/: sweepCompress.C  sweepCompress.h  sweepResponse.C  sweepResponse.h
modules/dmrg_lrt/: Operators_deriv.C  WORKSHEET  guess_wavefunction_deriv.C  opxop_deriv.h  save_load_block_deriv.C  sweep_lrt.C  sweep_lrt.h
modules/ds0_onepdm/: ds0_onepdm.C  ds0_onepdm.h  ds0_sweep.C  ds0_sweeponepdm.h
modules/ds1_onepdm/: ds1_onepdm.C  ds1_onepdm.h  ds1_sweep.C  ds1_sweeponepdm.h
modules/fourpdm/: fourpdm.C  (+11 more)
molcas/: Makefile  README  block_calldmrg.C  block_calldmrg.h  block_densi_rasscf.C  block_densi_rasscf.h  loadNpdm.C  loadNpdm.h  molcas_types.h  molpro_fcidump.C  molpro_fcidump.h  sortNpdm.C  sortNpdm.h  tranNpdm.C  tranNpdm.h
newmat10/: example  garch  makefile  newmat.h  newmat4.cpp  nl_ex  sl_ex  test_exc  tmt
pydmrg/: ChangeLog  README.md  TODO  __init__.py  dmrg.py  param.py  quanta.py  rotationmat.py  spinblock.py  stateinfo.py  sweep.py  utils.py  wavefunction.py
pydmrg/core/: CMakeLists.txt  _dmrg.cpp  _dmrg.pyx  config.h.in  hacks.cc  hacks.h  itrf.h  quanta.cc  rotmat.cc  rotmat.h  spinblock.cc  stateinfo.cc  wavefn.cc
sources/: CHANGELOG.txt  benchmark.txt  build.txt  examples-with-pyscf.txt  examples.txt  index.txt  keywords.txt  overview.txt  with-pyscf.txt
(+315 files in other folders)
